@@ -1,5 +1,6 @@
 Ctrlproxy 2.7:
  * Add repl_lastdisconnect.so
+ * Add server_connect, server_disconnect and initialized hooks
  * Add python plugin (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 
 Ctrlproxy 2.6:
